--- a/account/package.json
+++ b/account/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "semana 2 - nxt",
   "main": "tempCodeRunnerFile.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +16,5 @@
   "bugs": {
     "url": "https://github.com/NickMendes/ecomm/issues"
   },
-  "homepage": "https://github.com/NickMendes/ecomm#readme",
-  "type": "module"
+  "homepage": "https://github.com/NickMendes/ecomm#readme"
 }
