--- a/product/swagger/products.yaml
+++ b/product/swagger/products.yaml
@@ -16,11 +16,45 @@ components:
       type: object
       properties:
         id:
-          type: integer
+          type: string
         name:
           type: string
         status:
           type: string
+    product-response:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        description:
+          type: string
+        slug:
+          type: string
+        unit_price:
+          type: number
+          format: float
+        storage_qty:
+          type: integer
+        category_id:
+          type: string
+    product-insert:
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        slug:
+          type: string
+        unit_price:
+          type: number
+          format: float
+        storage_qty:
+          type: integer
+        category_id:
+          type: integer
 servers:
   - url: https://6096015d116f3f00174b29ba.mockapi.io/
     description: >-
@@ -43,7 +77,7 @@ paths:
                   type: object
                   properties:
                     id:
-                      type: integer
+                      type: string
                     name:
                       type: string
                     status:
@@ -71,7 +105,7 @@ paths:
                 type: object
                 properties:
                   id:
-                    type: integer
+                    type: string
                   name:
                     type: string
                   status:
@@ -105,7 +139,7 @@ paths:
                 type: object
                 properties:
                   id:
-                    type: integer
+                    type: string
                   name:
                     type: string
                   status:
@@ -141,11 +175,16 @@ paths:
                 type: object
                 properties:
                   id:
-                    type: integer
+                    type: string
                   name:
                     type: string
                   status:
                     type: string
+        '401':
+          description: Unauthorized
+          content:
+            aplication/json:
+              example: User unathorized, please check your credentials
         '404':
           description: Not Found
           content:
@@ -168,11 +207,16 @@ paths:
                 type: object
                 properties:
                   id:
-                    type: integer
+                    type: string
                   name:
                     type: string
                   status:
                     type: string
+        '401':
+          description: Unauthorized
+          content:
+            aplication/json:
+              example: User unathorized, please check your credentials
         '404':
           description: Not Found
           content:
@@ -192,10 +236,295 @@ paths:
           content:
             aplication/json:
               example: Category deleted
+        '401':
+          description: Unauthorized
+          content:
+            aplication/json:
+              example: User unathorized, please check your credentials
         '404':
           description: Not Found
           content:
             aplication/json:
               example: Category Not Found
+        '500':
+          description: Internal Server Error
+  /api/products:
+    get:
+      tags:
+        - products
+      summary: Search for all available products.
+      responses:
+        '200':
+          description: Success
+          content:
+            aplication/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    name:
+                      type: string
+                    description:
+                      type: string
+                    slug:
+                      type: string
+                    unit_price:
+                      type: number
+                      format: float
+                    storage_qty:
+                      type: integer
+                    category_id:
+                      type: string
+        '404':
+          description: Not Found
+          content:
+            aplication/json:
+              example: Not Found
+        '500':
+          description: Internal Server Error
+  /api/admin/products:
+    post:
+      tags:
+        - products
+      summary: >-
+        Add a new product to the list. You need to be logged as an adminstrator
+        to use this.
+      requestBody:
+        required: true
+        content:
+          aplication/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                slug:
+                  type: string
+                unit_price:
+                  type: number
+                  format: float
+                storage_qty:
+                  type: integer
+                category_id:
+                  type: integer
+      responses:
+        '200':
+          description: Success
+          content:
+            aplication/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    name:
+                      type: string
+                    description:
+                      type: string
+                    slug:
+                      type: string
+                    unit_price:
+                      type: number
+                      format: float
+                    storage_qty:
+                      type: integer
+                    category_id:
+                      type: string
+        '404':
+          description: Not Found
+          content:
+            aplication/json:
+              example: Not Found
+        '500':
+          description: Internal Server Error
+  /api/products/{id}:
+    parameters:
+      - name: id
+        in: path
+        description: Unique identifier
+        required: true
+        example: 63caa785ae701b25441ff0be
+        schema:
+          type: string
+    get:
+      tags:
+        - products
+      summary: Search for product by ID
+      responses:
+        '200':
+          description: Success
+          content:
+            aplication/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  name:
+                    type: string
+                  description:
+                    type: string
+                  slug:
+                    type: string
+                  unit_price:
+                    type: number
+                    format: float
+                  storage_qty:
+                    type: integer
+                  category_id:
+                    type: string
+        '404':
+          description: Not Found
+          content:
+            aplication/json:
+              example: Product Not Found
+        '500':
+          description: Internal Server Error
+  /api/admin/products/{id}:
+    parameters:
+      - name: id
+        in: path
+        description: Unique identifier
+        required: true
+        example: 63caa785ae701b25441ff0be
+        schema:
+          type: string
+    post:
+      tags:
+        - products
+      summary: >-
+        Change all product information by ID. You need to be logged as an
+        adminstrator to use this.
+      requestBody:
+        required: true
+        content:
+          aplication/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                slug:
+                  type: string
+                unit_price:
+                  type: number
+                  format: float
+                storage_qty:
+                  type: integer
+                category_id:
+                  type: integer
+      responses:
+        '202':
+          description: Accepted
+          content:
+            aplication/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  name:
+                    type: string
+                  description:
+                    type: string
+                  slug:
+                    type: string
+                  unit_price:
+                    type: number
+                    format: float
+                  storage_qty:
+                    type: integer
+                  category_id:
+                    type: string
+        '401':
+          description: Unauthorized
+          content:
+            aplication/json:
+              example: User unathorized, please check your credentials
+        '404':
+          description: Not Found
+          content:
+            aplication/json:
+              example: Product Not Found
+        '500':
+          description: Internal Server Error
+    patch:
+      tags:
+        - products
+      summary: >-
+        Change a product information by ID. You need to be logged as an
+        adminstrator to use this.
+      requestBody:
+        required: true
+        content:
+          aplication/json:
+            schema:
+              type: object
+      responses:
+        '202':
+          description: Accepted
+          content:
+            aplication/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  name:
+                    type: string
+                  description:
+                    type: string
+                  slug:
+                    type: string
+                  unit_price:
+                    type: number
+                    format: float
+                  storage_qty:
+                    type: integer
+                  category_id:
+                    type: string
+        '401':
+          description: Unauthorized
+          content:
+            aplication/json:
+              example: User unathorized, please check your credentials
+        '404':
+          description: Not Found
+          content:
+            aplication/json:
+              example: Product Not Found
+        '500':
+          description: Internal Server Error
+    delete:
+      tags:
+        - products
+      summary: >-
+        Delete product by ID. You need to be logged as an adminstrator to use
+        this.
+      responses:
+        '200':
+          description: Success
+          content:
+            aplication/json:
+              example: Product deleted
+        '401':
+          description: Unauthorized
+          content:
+            aplication/json:
+              example: User unathorized, please check your credentials
+        '404':
+          description: Not Found
+          content:
+            aplication/json:
+              example: Product Not Found
         '500':
           description: Internal Server Error
